--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -154,7 +154,7 @@ blues-scale, which are given as arguments and form an adhoc scale:
 The possible scales depend on the chosen type of harmonica:
 
 scales for chromatic: all, blues, blues-middle, chord-i, chord-i7, chord-iv, 
-    chord-iv7, chord-v, chord-v7, one, two
+    chord-iv7, chord-v, chord-v7, mape, one, two
   scales for richter: all, blues, blues-middle, chord-i, chord-i7, chord-i7om3, 
     chord-iv, chord-iv7, chord-iv7om3, chord-v, chord-v7, chord-v7om3, drawbends, 
     major, major-full, major-pentatonic, mape, mape4, mape5, middle, minor, 
