--- a/docs/_org/usage_licks.org
+++ b/docs/_org/usage_licks.org
@@ -86,7 +86,7 @@ Usage by Examples:
   and use mode print to see details about starred licks.
   Which licks are starred is kept in file (e.g)
 
-    <%=$star_file_template % 'richter'%>
+    /home/ihm/harpwise/licks/richter/starred.yaml
 
 
   There are some more options to *filter* the set of available licks
