--- a/docs/_org/usage.org
+++ b/docs/_org/usage.org
@@ -97,7 +97,12 @@ blues-scale, which are given as arguments and form an adhoc scale:
 
 The possible scales depend on the chosen type of harmonica:
 
-  <%=types_with_scales%>
+  scales for chromatic: all, blues, blues-middle, chord-i, chord-i7, chord-iv, 
+    chord-iv7, chord-v, chord-v7, mape, one, two
+  scales for richter: all, blues, blues-middle, chord-i, chord-i7, chord-i7om3, 
+    chord-iv, chord-iv7, chord-iv7om3, chord-v, chord-v7, chord-v7om3, drawbends, 
+    major, major-full, major-pentatonic, mape, mape4, mape5, middle, minor, 
+    minor-pentatonic, mipe, mixolydian
 
 Note that advanced users may try to create their own scales, see usage
 of mode tools for an example
@@ -180,7 +185,7 @@ Quick Start:
     harpwise jam along 12
   
 
-Version <%=$version%>
+Version 6.28.4
 Copyright (c) 2021-2025 by Marc Ihm (marc@ihm.name) 
 Harpwise is subject to the MIT License, type 'harpwise --license' for details.
 Source code available at https://github.com/marcIhm/harpwise
