--- a/docs/_org/usage_print.org
+++ b/docs/_org/usage_print.org
@@ -25,7 +25,28 @@ Overview of 'harpwise print':
   or one of the known extra arguments (that themselves might require
   additional arguments):
 
-<%= get_extra_desc_all(for_usage: true).join("\n") %>
+    - man-proc:
+  [2m    process/produce man page from erb-template[0m
+    - man-diff:
+  [2m    compare produced man page with usage[0m
+    - doc-proc:
+  [2m    process org-erb-templates for usage information and generate html[0m
+  [2m    docu with org-publish[0m
+    - selftest:
+  [2m    perform selftest with special regard to the environment[0m
+    - unittest:
+  [2m    unittest for features, that cannot easily be tested within the[0m
+  [2m    main test program[0m
+    - widgets:
+  [2m    excercise selected widgets to be tested[0m
+    - lickfile:
+  [2m    load and parse a lickfile[0m
+    - check-frequencies:
+  [2m    recalculate and check frequencies for current set of samples[0m
+    - read-scale-with-notes:
+  [2m    read given scale (first arg) from file (second arg)[0m
+    - dump:
+  [2m    dump internal data structures to stdout[0m
 
   
 Usage by Examples:
@@ -42,7 +63,12 @@ Usage by Examples:
 
     harpwise print st-louis
 
-<%= no_lick_selecting_options %>
+  Note, that the above case does not use any of the extra arguments given
+  above, but rather expects (maybe among others) lick-names on the
+  command line; in this case the lick-selecting tag-options (e.g. -t) are
+  ignored (even those from your config.ini) and the given lick-names
+  ('st-louis') are searched among ALL of your licks.
+
 
 
   Print holes and notes of a scale (blues):
