--- a/docs/_org/usage.org
+++ b/docs/_org/usage.org
@@ -100,12 +100,12 @@ The possible scales depend on the chosen type of harmonica:
   scales for chromatic: all, blues, blues-middle, chord-i, chord-i7, chord-iv, 
     chord-iv7, chord-v, chord-v7, mape, one, two
   scales for richter: all, blues, blues-middle, chord-i, chord-i7, chord-iv, 
-    chord-iv7, chord-v, chord-v7, drawbends, foo, major, major-full, 
-    major-pentatonic, mape, mape4, mape5, middle, minor, minor-pentatonic, mipe, 
-    mixolydian
+    chord-iv7, chord-v, chord-v7, drawbends, major, major-full, 
+    major-pentatonic, mape, mape4, mape5, middle, minor, minor-pentatonic, 
+    mipe, mixolydian
 
-Note that advanced users may try to create their own scales, see usage
-of mode tools for an example
+Note that advanced users may try to create their own scales. See
+usage of mode tools for an example.
 
 
 Besides the arguments for type, key and scale, there are a lot of
