--- a/docs/erb-org/usage.erb.org
+++ b/docs/erb-org/usage.erb.org
@@ -99,8 +99,8 @@ The possible scales depend on the chosen type of harmonica:
 
   <%=types_with_scales%>
 
-Note that advanced users may try to create their own scales, see usage
-of mode tools for an example
+Note that advanced users may try to create their own scales. See
+usage of mode tools for an example.
 
 
 Besides the arguments for type, key and scale, there are a lot of
