--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -155,13 +155,13 @@ The possible scales depend on the chosen type of harmonica:
 
 scales for chromatic: all, blues, blues-middle, chord-i, chord-i7, chord-iv, 
     chord-iv7, chord-v, chord-v7, mape, one, two
-scales for richter: all, blues, blues-middle, chord-i, chord-i7, chord-iv,
-    chord-iv7, chord-v, chord-v7, drawbends, major, major-full,
-    major-pentatonic, mape, mape4, mape5, middle, minor, minor-pentatonic, mipe,
-    mixolydian
+  scales for richter: all, blues, blues-middle, chord-i, chord-i7, chord-iv, 
+    chord-iv7, chord-v, chord-v7, drawbends, major, major-full, 
+    major-pentatonic, mape, mape4, mape5, middle, minor, minor-pentatonic, 
+    mipe, mixolydian
 
-Note that advanced users may try to create their own scales, see usage
-of mode tools for an example
+Note that advanced users may try to create their own scales. See
+usage of mode tools for an example.
 
 .SH "OPTIONS"
 
